cabal-version:       2.0
name:                torrent-ls
version:             0.1.0.0
synopsis:            List the contents of torrent files
description:
    List information about the files within one or more torrents.
homepage:            https://github.com/mat8913/torrent-ls
bug-reports:         https://github.com/mat8913/torrent-ls/issues
license:             GPL-3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          id@mbekkema.name
copyright:           2019 Matthew Harm Bekkema
category:            Network
build-type:          Simple

executable torrent-ls
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base ^>=4.12.0.0
                     , torrent ^>= 10000.1.1
                     , bytestring ^>= 0.10.8.2
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mat8913/torrent-ls

